# skillledger

./: .editorconfig  .env.example  .gitignore  .golangci.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEBASE-REVIEW.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile.prod  ECOSYSTEM-REVIEW.md  LICENSE  Makefile  POLICY-REVIEW.md  README.md  REVIEW-INFRASTRUCTURE.md  REVIEW-ioc-yara.md  REVIEW-verify-pipeline.md  REVIEW.md  SECURITY.md  SERVICE-REVIEW.md  TEST-SUITE-REVIEW.md  Taskfile.yml  docker-compose.prod.yml  docker-compose.yml  idea.md  project.md  render.yaml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
cli/: go.mod  go.sum
dashboard/: .dockerignore  .env.local.example  .gitignore  Dockerfile  package-lock.json  package.json  railway.json
deploy/: RUNBOOK.md  install.sh
docs/: plan_beyond.md  plan_v2.md  project_v1.md
hooks/: README.md  REVIEW.md  install.sh  (+5 more)
service/: Dockerfile  REVIEW.md  alembic.ini  entrypoint.sh  pyproject.toml  railway.json
service/alembic/: env.py
service/alembic/versions/: 001_add_publishers.py  002_add_users.py  003_add_threat_tables.py  004_add_billing_tables.py  005_add_org_tables.py  006_add_org_events_profiles.py  007_add_seat_columns.py  008_add_saml_configs.py
service/src/skillledger_service/: auth.py  config.py  db.py  email.py  main.py  seed.py  stripe_client.py  usage.py  user_auth.py
service/src/skillledger_service/ee/: LICENSE  __init__.py  license.py  seat_billing.py
service/src/skillledger_service/ee/routers/: billing_seats.py  events.py  orgs.py  policy.py  profiles.py  saml.py
service/src/skillledger_service/models/: __init__.py  artifact.py  org_event.py  organization.py  publisher.py  saml_config.py  threat.py  usage.py  user.py
service/src/skillledger_service/routers/: auth_router.py  billing.py  ingest.py  log.py  me.py  publishers.py  threat_library.py  usage_router.py  webhooks.py
service/tests/: conftest.py  test_auth.py  test_billing.py  test_ee_events.py  test_ee_orgs.py  test_ee_policy.py  test_ee_profiles.py  test_ee_saml.py  test_ee_seat_billing.py  test_health.py  test_ingest.py  test_log.py  test_publishers.py  test_seat_model.py  test_security.py  test_threat_library.py  test_usage.py  test_user_auth.py  test_webhooks.py
service/tests/integration/: conftest.py  test_uat_auth_middleware.py  test_uat_dashboard_layout.py  test_uat_file_upload.py  test_uat_monaco_editor.py  test_uat_otp_flow.py  test_uat_sso_saml.py  test_uat_stripe_billing.py
(+303 files in other folders)
