[project]
name = "skillledger-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128",
    "uvicorn[standard]",
    "pydantic>=2.13.4",
    "pydantic-settings",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "httpx",
    "PyJWT>=2.12",
    "resend>=2.29",
    "stripe>=15.0",
    "python3-saml>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "aiosqlite",
    "ruff",
    "mypy>=1.11",
    "types-requests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/skillledger_service"]
branch = true
omit = ["*/tests/*", "*/alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]
ignore = [
    "E501",   # line too long - ruff format handles it
    "PLR0913", # too many arguments to function call
    "PLR2004", # magic value comparison
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["alembic/", "tests/"]

[[tool.mypy.overrides]]
module = ["resend.*", "stripe.*", "saml2.*"]
ignore_missing_imports = true
